# TestCI

./: CMakeLists.txt  README.md  help-plugin_wx32.cbp.mak
.github/workflows/: blank.yml  cmake-multi-platform.yml  main.yml
docs/: doxs.md
include/: fpsImage.hpp  version.h.in
src/: FPSMain.cpp  fpsImage.cpp
